tests/snapshots/cli_e2e__doctor_all_snapshot.snap
---
source: tests/cli_e2e.rs
expression: stdout
---
ターゲット: t1
issue a_missing SKILL.md が見つかりません
ok b_ok
checked: 2 issues: 1
ターゲット: t2
ok c_ok
checked: 1 issues: 0
