tests/snapshots/cli_e2e__push_dry_run_snapshot.snap
---
source: tests/cli_e2e.rs
expression: stdout
---
update skill_diff
prune skill_extra
install skill_missing
skip skill_same
